--- a/platformio.ini
+++ b/platformio.ini
@@ -36,7 +36,7 @@ build_flags =
 	-L./lib
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
-	;-DCORE_DEBUG_LEVEL=5
+	-DCORE_DEBUG_LEVEL=5
 
 [esp32dev_base]
 build_flags =
