--- a/platformio.ini
+++ b/platformio.ini
@@ -9,61 +9,60 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ht-ct62
-;default_envs = ttgo-lora32-v1
-;default_envs = ttgo_t_beam_S3_SUPREME_V3
+;default_envs = ht-ct62
+default_envs = ttgo-lora32-v1
 
 [env]
 platform = espressif32
 framework = arduino
-;lib_ldf_mode = deep+
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 upload_protocol = esptool
 board_build.partitions = min_spiffs.csv
 lib_deps = 
-    ottowinter/ESPAsyncWebServer-esphome@^3.1.0
-    densaugeo/base64@^1.2.1
+	ottowinter/ESPAsyncWebServer-esphome@^3.1.0
+	densaugeo/base64@^1.2.1
 	zmeiresearch/Wireguard client for LwIP on ESP32@^1.0.1
-    jgromes/RadioLib@^6.4.2
-    mikalhart/TinyGPSPlus@^1.0.2
-    adafruit/Adafruit NeoPixel@^1.11.0
-    adafruit/Adafruit SSD1306 @ 2.5.7
-    plerup/EspSoftwareSerial@8.1.0
-    4-20ma/ModbusMaster@^2.0.1
-
+	jgromes/RadioLib@^6.4.2
+	mikalhart/TinyGPSPlus@^1.0.2
+	adafruit/Adafruit NeoPixel@^1.11.0
+	adafruit/Adafruit SSD1306 @ 2.5.7
+	plerup/EspSoftwareSerial@8.1.0
+	4-20ma/ModbusMaster@^2.0.1
+	lorol/LittleFS_esp32@^1.0.6
 build_flags = 
 	-L./lib
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
 	-DCORE_DEBUG_LEVEL=5
+	;-DBUOY=1
 
 [esp32dev_base]
-build_flags =
-    ${env.build_flags}
+build_flags = 
+	${env.build_flags}
 
 [esp32c3_base]
 board_build.mcu = esp32c3
-build_flags =
-    ${env.build_flags}
+build_flags = 
+	${env.build_flags}
 
 [esp32s3_base]
 board = esp32-s3-devkitc-1
-build_flags =
-    ${env.build_flags}
-    -DARDUINO_USB_MODE=1
-    -DARDUINO_USB_CDC_ON_BOOT=1
+build_flags = 
+	${env.build_flags}
+	-DARDUINO_USB_MODE=1
+	-DARDUINO_USB_CDC_ON_BOOT=1
 
 [env:ht-ct62]
 board = esp32-c3-devkitm-1
 build_flags = ${esp32c3_base.build_flags}
-    -DHT_CT62
+	-DHT_CT62
 
 [env:ttgo-lora32-v1]
 board = ttgo-lora32-v1
 build_flags = ${esp32dev_base.build_flags}
-    -DTTGO_LORA32_V1
-    -DOLED
+	-DTTGO_LORA32_V1
+	-DOLED
 
 [env:ttgo-t-beam-v1_2]
 board = ttgo-t-beam
@@ -104,9 +103,9 @@ build_flags = -Werror -Wall -DTTGO_T_Beam_V0_7
 [env:ttgo_t_beam_S3_SUPREME_V3]
 board = esp32-s3-devkitc-1
 build_flags = ${esp32s3_base.build_flags}
-    -DTTGO_T_Beam_S3_SUPREME_V3
-    -DBOARD_HAS_PSRAM
-    -DOLED
+	-DTTGO_T_Beam_S3_SUPREME_V3
+	-DBOARD_HAS_PSRAM
+	-DOLED
 
 [env:heltec_V3_GPS]
 board = heltec_wifi_lora_32_V3
