Fix spi_flash for ESP32C3

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;default_envs = ht-ct62
-default_envs = ttgo-lora32-v1
+default_envs = ht-ct62
+;default_envs = ttgo-lora32-v1
 
 [env]
 platform = espressif32
@@ -34,7 +34,7 @@ build_flags =
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
 	-DCORE_DEBUG_LEVEL=5
-	;-DBUOY=1
+	-DBUOY=1
 
 [esp32dev_base]
 build_flags = 
