--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ht-ct62
+default_envs = aprs-lora-ht
+;default_envs = ht-ct62
 ;default_envs = ttgo-lora32-v1
 
 [env]
@@ -34,7 +35,7 @@ build_flags =
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
 	-DCORE_DEBUG_LEVEL=5
-	-DBUOY=1
+	;-DBUOY=1
 
 [esp32dev_base]
 build_flags = 
@@ -110,3 +111,10 @@ build_flags = ${esp32s3_base.build_flags}
 board = heltec_wifi_lora_32_V3
 build_flags = -DHELTEC_V3_GPS
 board_build.mcu = esp32s3
+
+[env:aprs-lora-ht]
+board = esp32-s3-devkitc-1
+build_flags = ${esp32s3_base.build_flags}
+	-DAPRS_LORA_HT
+	-DBOARD_HAS_PSRAM
+	-DOLED
