--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = aprs-lora-ht
+;default_envs = aprs-lora-ht
 ;default_envs = ht-ct62
 ;default_envs = ttgo-lora32-v1
+default_envs = heltec_htit_tracker
+;default_envs = aprs-lora-dongle
+;default_envs = ttgo_t_beam_S3_SUPREME_V3
+;default_envs = ttgo-t-beam-v1_2
 
 [env]
 platform = espressif32
@@ -30,11 +34,19 @@ lib_deps =
 	adafruit/Adafruit SSD1306 @ 2.5.7
 	plerup/EspSoftwareSerial@8.1.0
 	4-20ma/ModbusMaster@^2.0.1
+	adafruit/Adafruit BME280 Library@^2.2.4
+	adafruit/Adafruit BMP280 Library@^2.6.8
+	adafruit/Adafruit Si7021 Library@^1.5.3
+	adafruit/Adafruit CCS811 Library@^1.1.3
+	bheesma-10/IP5306_I2C@^1.0.2
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
+	sensirion/arduino-sht@^1.2.5
+	lewisxhe/XPowersLib@^0.1.7
 build_flags = 
 	-L./lib
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
-	-DCORE_DEBUG_LEVEL=5
+	;-DCORE_DEBUG_LEVEL=5
 	;-DBUOY=1
 
 [esp32dev_base]
@@ -43,6 +55,11 @@ build_flags =
 
 [esp32c3_base]
 board_build.mcu = esp32c3
+build_flags = 
+	${env.build_flags}
+
+[esp32c6_base]
+board_build.mcu = esp32c6
 build_flags = 
 	${env.build_flags}
 
@@ -66,7 +83,11 @@ build_flags = ${esp32dev_base.build_flags}
 
 [env:ttgo-t-beam-v1_2]
 board = ttgo-t-beam
-build_flags = -Werror -Wall -DTTGO_T_Beam_V1_2
+build_flags = ${esp32dev_base.build_flags}
+	-DTTGO_T_Beam_V1_2
+	-DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+	-DOLED
 
 [env:ttgo-t-beam-v1]
 board = ttgo-t-beam
@@ -102,9 +123,12 @@ build_flags = -Werror -Wall -DTTGO_T_Beam_V0_7
 
 [env:ttgo_t_beam_S3_SUPREME_V3]
 board = esp32-s3-devkitc-1
+board_build.partitions = flash_8MB.csv
 build_flags = ${esp32s3_base.build_flags}
 	-DTTGO_T_Beam_S3_SUPREME_V3
 	-DBOARD_HAS_PSRAM
+	-UARDUINO_USB_CDC_ON_BOOT
+	-mfix-esp32-psram-cache-issue
 	-DOLED
 
 [env:heltec_V3_GPS]
@@ -112,9 +136,29 @@ board = heltec_wifi_lora_32_V3
 build_flags = -DHELTEC_V3_GPS
 board_build.mcu = esp32s3
 
+[env:heltec_htit_tracker]
+board = esp32-s3-devkitc-1
+board_build.partitions = flash_8MB.csv
+build_flags = ${esp32s3_base.build_flags}
+	-DHELTEC_HTIT_TRACKER
+	-DST7735_160x80
+
 [env:aprs-lora-ht]
 board = esp32-s3-devkitc-1
+board_build.mcu = esp32s3
+board_build.partitions = flash_16MB.csv
 build_flags = ${esp32s3_base.build_flags}
 	-DAPRS_LORA_HT
+	-UARDUINO_USB_CDC_ON_BOOT
 	-DBOARD_HAS_PSRAM
 	-DOLED
+
+[env:aprs-lora-dongle]
+board = esp32-s3-devkitc-1
+board_build.mcu = esp32s3
+board_build.partitions = flash_16MB.csv
+build_flags = ${esp32s3_base.build_flags}
+	-DAPRS_LORA_DONGLE
+	-UARDUINO_USB_CDC_ON_BOOT
+	-DBOARD_HAS_PSRAM
+	-DST7735_160x80
