update readme and fix lora crc error

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,13 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;default_envs = aprs-lora-ht
 ;default_envs = ht-ct62
-;default_envs = ttgo-lora32-v1
-default_envs = heltec_htit_tracker
-;default_envs = aprs-lora-dongle
-;default_envs = ttgo_t_beam_S3_SUPREME_V3
+default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-t-beam-v1_2
+;default_envs = heltec_htit_tracker
+;default_envs = ttgo_t_beam_S3_SUPREME_V3
+;default_envs = aprs-lora-dongle
+;default_envs = aprs-lora-ht
+
 
 [env]
 platform = espressif32
