Fix power save mode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "esp_spi_flash.h": "c",
-        "spi_flash.h": "c"
+        "spi_flash.h": "c",
+        "*.tpp": "cpp"
     }
 }
