--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,10 @@
 ;default_envs = ht-ct62
 ;default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-t-beam-v1_2
-default_envs = heltec_htit_tracker
+;default_envs = heltec_htit_tracker
 ;default_envs = ttgo_t_beam_S3_SUPREME_V3
 ;default_envs = aprs-lora-dongle
-;default_envs = aprs-lora-ht
+default_envs = aprs-lora-ht
 
 
 [env]
@@ -47,7 +47,7 @@ build_flags =
 	-L./lib
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
-	;-DCORE_DEBUG_LEVEL=5
+	-DCORE_DEBUG_LEVEL=5
 	;-DBUOY=1
 
 [esp32dev_base]
@@ -141,6 +141,7 @@ board_build.mcu = esp32s3
 board = esp32-s3-devkitc-1
 board_build.partitions = flash_8MB.csv
 build_flags = ${esp32s3_base.build_flags}
+	-UARDUINO_USB_CDC_ON_BOOT
 	-DHELTEC_HTIT_TRACKER
 	-DST7735_160x80
 
@@ -151,7 +152,7 @@ board_build.partitions = flash_16MB.csv
 build_flags = ${esp32s3_base.build_flags}
 	-DAPRS_LORA_HT
 	-UARDUINO_USB_CDC_ON_BOOT
-	-DBOARD_HAS_PSRAM
+	;-DBOARD_HAS_PSRAM
 	-DOLED
 
 [env:aprs-lora-dongle]
