--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ht-ct62, ttgo-lora32-v1, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3
+default_envs = ht-ct62, ttgo-lora32-v1, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, aprs-lora-dongle
 ;default_envs = ht-ct62
 ;default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-t-beam-v1_2
@@ -48,7 +48,7 @@ build_flags =
 	-L./lib
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
-	-DCORE_DEBUG_LEVEL=5
+	;-DCORE_DEBUG_LEVEL=5
 	;-DBUOY=1
 
 [esp32dev_base]
@@ -147,21 +147,26 @@ build_flags = ${esp32s3_base.build_flags}
 	-DST7735_160x80
 
 [env:aprs-lora-ht]
-board = esp32-s3-devkitc-1
+board = esp32s3box
 board_build.mcu = esp32s3
-board_build.partitions = flash_16MB.csv
+board_build.partitions = default_16MB.csv
+board_build.arduino.memory_type = qio_opi
 build_flags = ${esp32s3_base.build_flags}
 	-DAPRS_LORA_HT
 	-UARDUINO_USB_CDC_ON_BOOT
-	;-DBOARD_HAS_PSRAM
+	-DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
 	-DOLED
 
 [env:aprs-lora-dongle]
-board = esp32-s3-devkitc-1
+board = esp32s3box
 board_build.mcu = esp32s3
-board_build.partitions = flash_16MB.csv
+board_build.partitions = default_16MB.csv
+board_build.arduino.memory_type = dio_opi
 build_flags = ${esp32s3_base.build_flags}
 	-DAPRS_LORA_DONGLE
 	-UARDUINO_USB_CDC_ON_BOOT
 	-DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
 	-DST7735_160x80
+	-DVHF
