--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ht-ct62, ttgo-lora32-v1, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, aprs-lora-dongle
+default_envs = ht-ct62, ttgo-lora32-v1, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
 ;default_envs = ht-ct62
 ;default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-t-beam-v1_2
 ;default_envs = heltec_htit_tracker
 ;default_envs = ttgo_t_beam_S3_SUPREME_V3
+;default_envs = heltec_V3_GPS
 ;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
 
@@ -44,6 +45,7 @@ lib_deps =
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
 	sensirion/arduino-sht@^1.2.5
 	lewisxhe/XPowersLib@^0.1.7
+	milesburton/DallasTemperature@^3.11.0
 build_flags = 
 	-L./lib
 	-Wl,-Map,output.map
@@ -134,9 +136,12 @@ build_flags = ${esp32s3_base.build_flags}
 	-DOLED
 
 [env:heltec_V3_GPS]
-board = heltec_wifi_lora_32_V3
-build_flags = -DHELTEC_V3_GPS
-board_build.mcu = esp32s3
+board = esp32-s3-devkitc-1
+board_build.partitions = flash_8MB.csv
+build_flags = ${esp32s3_base.build_flags}
+	-UARDUINO_USB_CDC_ON_BOOT
+	-DHELTEC_V3_GPS
+	-DOLED
 
 [env:heltec_htit_tracker]
 board = esp32-s3-devkitc-1
@@ -169,4 +174,5 @@ build_flags = ${esp32s3_base.build_flags}
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-DST7735_160x80
-	-DVHF
+	;-DNV3022B3
+	;-DVHF
