--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ht-ct62, ttgo-lora32-v1, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
+default_envs = ht-ct62, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
 ;default_envs = ht-ct62
 ;default_envs = ttgo-lora32-v1
+;default_envs = ttgo-lora32-v1_6
 ;default_envs = ttgo-t-beam-v1_2
 ;default_envs = heltec_htit_tracker
 ;default_envs = ttgo_t_beam_S3_SUPREME_V3
@@ -46,6 +47,8 @@ lib_deps =
 	sensirion/arduino-sht@^1.2.5
 	lewisxhe/XPowersLib@^0.1.7
 	milesburton/DallasTemperature@^3.11.0
+	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
+	adafruit/Adafruit SSD1306 @ ^2.5.13
 build_flags = 
 	-L./lib
 	-Wl,-Map,output.map
@@ -85,6 +88,12 @@ build_flags = ${esp32dev_base.build_flags}
 	-DTTGO_LORA32_V1
 	-DOLED
 
+[env:ttgo-lora32-v1_6]
+board = ttgo-lora32-v1
+build_flags = ${esp32dev_base.build_flags}
+	-DTTGO_LORA32_V1_6
+	-DOLED
+
 [env:ttgo-t-beam-v1_2]
 board = ttgo-t-beam
 build_flags = ${esp32dev_base.build_flags}
@@ -93,37 +102,11 @@ build_flags = ${esp32dev_base.build_flags}
 	-mfix-esp32-psram-cache-issue
 	-DOLED
 
-[env:ttgo-t-beam-v1]
-board = ttgo-t-beam
-build_flags = -Werror -Wall -DTTGO_T_Beam_V1_0
-
-[env:ttgo-t-lora32-v2_1_TNC]
-board = ttgo-lora32-v21
-build_flags = -Werror -Wall -DTTGO_T_LORA32_V2_1_TNC
-
-[env:ttgo-t-lora32-v2_1_GPS]
-board = ttgo-lora32-v21
-build_flags = -Werror -Wall -DTTGO_T_LORA32_V2_1_GPS
-
 [env:ESP32_DIY_LoRa_GPS]
 board = esp32dev
-build_flags = -Werror -Wall -DESP32_DIY_LoRa_GPS
-
-[env:ESP32_DIY_1W_LoRa_GPS]
-board = esp32dev
-build_flags = -Werror -Wall -DESP32_DIY_1W_LoRa_GPS
-
-[env:ttgo-t-beam-v1_SX1268]
-board = ttgo-t-beam
-build_flags = -Werror -Wall -DTTGO_T_Beam_V1_0_SX1268
-
-[env:ttgo-t-beam-v1_2_SX1262]
-board = ttgo-t-beam
-build_flags = -Werror -Wall -DTTGO_T_Beam_V1_2_SX1262
-
-[env:ttgo-t-beam-v0_7]
-board = ttgo-t-beam
-build_flags = -Werror -Wall -DTTGO_T_Beam_V0_7
+build_flags = ${esp32dev_base.build_flags}
+	-DESP32_DIY_LoRa_GPS
+	-DOLED
 
 [env:ttgo_t_beam_S3_SUPREME_V3]
 board = esp32-s3-devkitc-1
@@ -134,6 +117,7 @@ build_flags = ${esp32s3_base.build_flags}
 	-UARDUINO_USB_CDC_ON_BOOT
 	-mfix-esp32-psram-cache-issue
 	-DOLED
+	-DSH1106
 
 [env:heltec_V3_GPS]
 board = esp32-s3-devkitc-1
@@ -162,6 +146,7 @@ build_flags = ${esp32s3_base.build_flags}
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-DOLED
+	-DSH1106
 
 [env:aprs-lora-dongle]
 board = esp32s3box
@@ -175,4 +160,4 @@ build_flags = ${esp32s3_base.build_flags}
 	-mfix-esp32-psram-cache-issue
 	-DST7735_160x80
 	;-DNV3022B3
-	;-DVHF
+	-DVHF
