--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ default_envs = ht-ct62, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, helt
 
 
 [env]
-platform = espressif32
+platform = espressif32 @ 6.9.0
 framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
