--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ default_envs = ht-ct62, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, helt
 ;default_envs = heltec_V3_GPS
 ;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
+;default_envs = esp32_c6_devkit
 
 
 [env]
@@ -67,6 +68,7 @@ build_flags =
 
 [esp32c6_base]
 board_build.mcu = esp32c6
+board_build.f_cpu = 160000000L
 build_flags = 
 	${env.build_flags}
 
@@ -81,6 +83,12 @@ build_flags =
 board = esp32-c3-devkitm-1
 build_flags = ${esp32c3_base.build_flags}
 	-DHT_CT62
+
+[env:esp32_c6_devkit]
+board = esp32-c6-devkitm-1
+build_flags = ${esp32c6_base.build_flags}
+	-DESP32_C6_DEVKIT
+	-DOLED
 
 [env:ttgo-lora32-v1]
 board = ttgo-lora32-v1
