--- a/platformio.ini
+++ b/platformio.ini
@@ -9,21 +9,22 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ht-ct62, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
+;default_envs = ht-ct62, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
 ;default_envs = ht-ct62
 ;default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-lora32-v1_6
+;default_envs = ttgo-lora32-v21
 ;default_envs = ttgo-t-beam-v1_2
-;default_envs = heltec_htit_tracker
+default_envs = heltec_htit_tracker
 ;default_envs = ttgo_t_beam_S3_SUPREME_V3
 ;default_envs = heltec_V3_GPS
 ;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
-;default_envs = esp32_c6_devkit
+;default_envs = BV5DJ-board ; https://oshwlab.com/GabeH/esp32-lora-aprs
 
 
 [env]
-platform = espressif32 @ 6.9.0
+platform = espressif32@6.9.0
 framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
@@ -102,6 +103,12 @@ build_flags = ${esp32dev_base.build_flags}
 	-DTTGO_LORA32_V1_6
 	-DOLED
 
+[env:ttgo-lora32-v21]
+board = ttgo-lora32-v2
+build_flags = ${esp32dev_base.build_flags}
+	-DTTGO_LORA32_V21
+	-DOLED
+
 [env:ttgo-t-beam-v1_2]
 board = ttgo-t-beam
 build_flags = ${esp32dev_base.build_flags}
@@ -139,7 +146,8 @@ build_flags = ${esp32s3_base.build_flags}
 board = esp32-s3-devkitc-1
 board_build.partitions = flash_8MB.csv
 build_flags = ${esp32s3_base.build_flags}
-	-UARDUINO_USB_CDC_ON_BOOT
+	-DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
 	-DHELTEC_HTIT_TRACKER
 	-DST7735_160x80
 
@@ -169,3 +177,10 @@ build_flags = ${esp32s3_base.build_flags}
 	-DST7735_160x80
 	;-DNV3022B3
 	-DVHF
+
+[env:BV5DJ-board]
+board = esp32dev
+build_flags = ${esp32dev_base.build_flags}
+	-DBV5DJ_BOARD
+	-DOLED
+	-DSDCARD
