--- a/platformio.ini
+++ b/platformio.ini
@@ -9,28 +9,36 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ht-ct62, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
+;default_envs = ht-ct62, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
 ;default_envs = ht-ct62
 ;default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-lora32-v1_6
+;default_envs = ttgo-lora32-v21
 ;default_envs = ttgo-t-beam-v1_2
 ;default_envs = heltec_htit_tracker
 ;default_envs = ttgo_t_beam_S3_SUPREME_V3
 ;default_envs = heltec_V3_GPS
 ;default_envs = aprs-lora-dongle
-;default_envs = aprs-lora-ht
+default_envs = aprs-lora-ht
 ;default_envs = esp32_c6_devkit
+;default_envs = BV5DJ-board ; https://oshwlab.com/GabeH/esp32-lora-aprs
 
 
 [env]
 platform = espressif32 @ 6.9.0
 framework = arduino
+;platform_packages =
+;    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.7
+;    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-lib-builder/releases/download/idf-release_v5.1/esp32-arduino-libs-idf-release_v5.1-632e0c2a.zip
+;platform_packages =
+;	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+;	platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 upload_protocol = esptool
 board_build.partitions = min_spiffs.csv
 lib_deps = 
-	ottowinter/ESPAsyncWebServer-esphome@^3.1.0
+	ottowinter/ESPAsyncWebServer-esphome @ 3.3.0
 	densaugeo/base64@^1.2.1
 	zmeiresearch/Wireguard client for LwIP on ESP32@^1.0.1
 	jgromes/RadioLib@^6.4.2
@@ -49,12 +57,15 @@ lib_deps =
 	lewisxhe/XPowersLib@^0.1.7
 	milesburton/DallasTemperature@^3.11.0
 	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
-	adafruit/Adafruit SSD1306 @ ^2.5.13
+	bblanchon/ArduinoJson@^7.2.1
+	;olikraus/U8g2@^2.36.2
+	;orgua/OneWireHub@^3.0.0
+
 build_flags = 
 	-L./lib
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
-	;-DCORE_DEBUG_LEVEL=5
+	-DCORE_DEBUG_LEVEL=5
 	;-DBUOY=1
 
 [esp32dev_base]
@@ -83,9 +94,12 @@ build_flags =
 board = esp32-c3-devkitm-1
 build_flags = ${esp32c3_base.build_flags}
 	-DHT_CT62
+	;-DOLED
+	;-DSSD1306_72x40
+
 
 [env:esp32_c6_devkit]
-board = esp32-c6-devkitm-1
+board = esp32-c6-devkitc-1
 build_flags = ${esp32c6_base.build_flags}
 	-DESP32_C6_DEVKIT
 	-DOLED
@@ -101,6 +115,12 @@ board = ttgo-lora32-v1
 build_flags = ${esp32dev_base.build_flags}
 	-DTTGO_LORA32_V1_6
 	-DOLED
+
+[env:ttgo-lora32-v21]
+board = ttgo-lora32-v2
+build_flags = ${esp32dev_base.build_flags}
+	-DTTGO_LORA32_V21
+	-DOLED	
 
 [env:ttgo-t-beam-v1_2]
 board = ttgo-t-beam
@@ -128,9 +148,10 @@ build_flags = ${esp32s3_base.build_flags}
 	-DSH1106
 
 [env:heltec_V3_GPS]
-board = esp32-s3-devkitc-1
+board = heltec_wifi_lora_32_V3
 board_build.partitions = flash_8MB.csv
 build_flags = ${esp32s3_base.build_flags}
+	-DARDUINO_USB_MODE=1
 	-UARDUINO_USB_CDC_ON_BOOT
 	-DHELTEC_V3_GPS
 	-DOLED
@@ -169,3 +190,10 @@ build_flags = ${esp32s3_base.build_flags}
 	-DST7735_160x80
 	;-DNV3022B3
 	-DVHF
+
+[env:BV5DJ-board]
+board = esp32dev
+build_flags = ${esp32dev_base.build_flags}
+	-DBV5DJ_BOARD
+	-DOLED
+	-DSDCARD
