--- a/platformio.ini
+++ b/platformio.ini
@@ -11,11 +11,12 @@
 [platformio]
 ;default_envs = ht-ct62, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
 ;default_envs = ht-ct62
+default_envs = esp32c3-mini
 ;default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-lora32-v1_6
 ;default_envs = ttgo-lora32-v21
 ;default_envs = ttgo-t-beam-v1_2
-default_envs = heltec_htit_tracker
+;default_envs = heltec_htit_tracker
 ;default_envs = ttgo_t_beam_S3_SUPREME_V3
 ;default_envs = heltec_V3_GPS
 ;default_envs = aprs-lora-dongle
@@ -43,7 +44,6 @@ lib_deps =
 	jgromes/RadioLib@^6.4.2
 	mikalhart/TinyGPSPlus@^1.0.2
 	adafruit/Adafruit NeoPixel@^1.11.0
-	adafruit/Adafruit SSD1306 @ 2.5.7
 	plerup/EspSoftwareSerial@8.1.0
 	4-20ma/ModbusMaster@^2.0.1
 	adafruit/Adafruit BME280 Library@^2.2.4
@@ -57,8 +57,9 @@ lib_deps =
 	milesburton/DallasTemperature@^3.11.0
 	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
 	bblanchon/ArduinoJson@^7.2.1
+	;moononournation/GFX Library for Arduino@^1.5.0
 	;olikraus/U8g2@^2.36.2
-	;orgua/OneWireHub@^3.0.0
+	;orgua/OneWireHub@^3.0.0	
 
 build_flags = 
 	-L./lib
@@ -93,9 +94,14 @@ build_flags =
 board = esp32-c3-devkitm-1
 build_flags = ${esp32c3_base.build_flags}
 	-DHT_CT62
-	;-DOLED
-	;-DSSD1306_72x40
+	-DOLED
 
+[env:esp32c3-mini]
+board = esp32-c3-devkitm-1
+build_flags = ${esp32c3_base.build_flags}
+	-DESP32C3_MINI
+	-DOLED
+	-DSSD1306_72x40
 
 [env:esp32_c6_devkit]
 board = esp32-c6-devkitc-1
@@ -120,12 +126,6 @@ board = ttgo-lora32-v2
 build_flags = ${esp32dev_base.build_flags}
 	-DTTGO_LORA32_V21
 	-DOLED	
-
-[env:ttgo-lora32-v21]
-board = ttgo-lora32-v2
-build_flags = ${esp32dev_base.build_flags}
-	-DTTGO_LORA32_V21
-	-DOLED
 
 [env:ttgo-t-beam-v1_2]
 board = ttgo-t-beam
