--- a/platformio.ini
+++ b/platformio.ini
@@ -9,14 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;default_envs = ht-ct62, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
+;default_envs = ht-ct62, esp32c3-mini, esp32-sh1106, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
 ;default_envs = ht-ct62
-;default_envs = esp32c3-mini
+default_envs = esp32c3-mini
 ;default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-lora32-v1_6
 ;default_envs = ttgo-lora32-v21
 ;default_envs = ttgo-t-beam-v1_2
-default_envs = heltec_htit_tracker
+;default_envs = heltec_htit_tracker
 ;default_envs = ttgo_t_beam_S3_SUPREME_V3
 ;default_envs = heltec_V3_GPS
 ;default_envs = aprs-lora-dongle
@@ -56,17 +56,13 @@ lib_deps =
 	lewisxhe/XPowersLib@^0.1.7
 	milesburton/DallasTemperature@^3.11.0
 	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
-	bblanchon/ArduinoJson@^7.2.1
-	;adafruit/Adafruit GFX Library@^1.11.11
-	;moononournation/GFX Library for Arduino@^1.5.0
-	;olikraus/U8g2@^2.36.2
-	;orgua/OneWireHub@^3.0.0	
+	bblanchon/ArduinoJson@^7.2.1	
 
 build_flags = 
 	-L./lib
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
-	-DCORE_DEBUG_LEVEL=5
+	;-DCORE_DEBUG_LEVEL=5
 	;-DBUOY=1
 
 [esp32dev_base]
@@ -96,6 +92,7 @@ board = esp32-c3-devkitm-1
 build_flags = ${esp32c3_base.build_flags}
 	-DHT_CT62
 	-DOLED
+	-DSH1106
 
 [env:esp32c3-mini]
 board = esp32-c3-devkitm-1
@@ -109,6 +106,13 @@ board = esp32-c6-devkitc-1
 build_flags = ${esp32c6_base.build_flags}
 	-DESP32_C6_DEVKIT
 	-DOLED
+
+[env:esp32-sh1106]
+board = ttgo-lora32-v1
+build_flags = ${esp32dev_base.build_flags}
+	-DTTGO_LORA32_V1
+	-DOLED
+	-DSH1106
 
 [env:ttgo-lora32-v1]
 board = ttgo-lora32-v1
