--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;default_envs = ht-ct62, esp32c3-mini, esp32-sh1106, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
+default_envs = ht-ct62, esp32c3-mini, esp32-sh1106, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
 ;default_envs = ht-ct62
-default_envs = esp32c3-mini
+;default_envs = esp32c3-mini
+;default_envs = esp32-sh1106
 ;default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-lora32-v1_6
 ;default_envs = ttgo-lora32-v21
