--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [platformio]
 ;default_envs = ht-ct62, esp32c3-mini, esp32-sh1106, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
 ;default_envs = ht-ct62
-;default_envs = esp32c3-mini
+default_envs = esp32c3-mini
 ;default_envs = esp32-sh1106
 ;default_envs = ttgo-lora32-v1
 ;default_envs = ttgo-lora32-v1_6
@@ -20,7 +20,7 @@
 ;default_envs = heltec_htit_tracker
 ;default_envs = ttgo_t_beam_S3_SUPREME_V3
 ;default_envs = heltec_V3_GPS
-default_envs = aprs-lora-dongle
+;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
 ;default_envs = esp32_c6_devkit
 
