--- a/platformio.ini
+++ b/platformio.ini
@@ -200,7 +200,7 @@ build_flags = ${esp32s3_base.build_flags}
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-DST7735_160x80
-	;-DNV3022B3
+	-DNV3022B3
 	-DVHF
 
 [env:BV5DJ-board]
