--- a/platformio.ini
+++ b/platformio.ini
@@ -17,10 +17,10 @@
 ;default_envs = ttgo-lora32-v1_6
 ;default_envs = ttgo-lora32-v21
 ;default_envs = ttgo-t-beam-v1_2
-;default_envs = heltec_htit_tracker
+default_envs = heltec_htit_tracker
 ;default_envs = ttgo_t_beam_S3_SUPREME_V3
 ;default_envs = heltec_V3_GPS
-default_envs = aprs-lora-dongle
+;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
 ;default_envs = esp32_c6_devkit
 
