--- a/platformio.ini
+++ b/platformio.ini
@@ -17,10 +17,10 @@
 ;default_envs = ttgo-lora32-v1_6
 ;default_envs = ttgo-lora32-v21
 ;default_envs = ttgo-t-beam-v1_2
-default_envs = heltec_htit_tracker
+;default_envs = heltec_htit_tracker
 ;default_envs = ttgo_t_beam_S3_SUPREME_V3
 ;default_envs = heltec_V3_GPS
-;default_envs = aprs-lora-dongle
+default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
 ;default_envs = esp32_c6_devkit
 
@@ -200,7 +200,7 @@ build_flags = ${esp32s3_base.build_flags}
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-DST7735_160x80
-	-DNV3022B3
+	;-DNV3022B3
 	-DVHF
 
 [env:BV5DJ-board]
