--- a/platformio.ini
+++ b/platformio.ini
@@ -58,12 +58,13 @@ lib_deps =
 	milesburton/DallasTemperature@^3.11.0
 	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
 	bblanchon/ArduinoJson@^7.2.1	
+	h2zero/NimBLE-Arduino@^2.2.2
 
 build_flags = 
 	-L./lib
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
-	;-DCORE_DEBUG_LEVEL=5
+	-DCORE_DEBUG_LEVEL=5
 	;-DBUOY=1
 
 [esp32dev_base]
