--- a/platformio.ini
+++ b/platformio.ini
@@ -55,7 +55,7 @@ build_flags =
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
 	;-DCONFIG_I2C_ENABLE_DEBUG_LOG=0
-	;-DCORE_DEBUG_LEVEL=0	
+	;-DCORE_DEBUG_LEVEL=4
 	-DCONFIG_LWIP_PPP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_PAP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_CHAP_SUPPORT=1
@@ -109,9 +109,18 @@ build_flags = ${esp32c3_base.build_flags}
 [env:esp32_c6_devkit]
 platform = ${esp32c3_base.platform}
 board = esp32-c6-devkitc-1
-build_flags = ${esp32c6_base.build_flags}
-	-DESP32_C6_DEVKIT
+board_build.partitions = default_8MB.csv
+lib_deps = ${env.lib_deps}
+	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
+	;h2zero/NimBLE-Arduino@^2.3.4
+lib_extra_dirs =
+	./lib_extra/NuS-NimBLE-Serial
+build_flags = ${esp32dev_base.build_flags}
+	-DLOG_FILE
+	-DHT_CT62
 	-DOLED
+	-DSH1106
+	;-DBLUETOOTH
 
 [env:ttgo-lora32-v1]
 board = ttgo-lora32-v1
@@ -152,7 +161,7 @@ build_flags = ${esp32dev_base.build_flags}
 board = ttgo-lora32-v1
 board_build.partitions = default_8MB.csv
 lib_deps = ${env.lib_deps}
-	h2zero/NimBLE-Arduino@2.2.3
+	h2zero/NimBLE-Arduino@^2.3.4
 lib_extra_dirs =
 	./lib_extra/NuS-NimBLE-Serial
 build_flags = ${esp32dev_base.build_flags}
@@ -166,7 +175,7 @@ board = esp32doit-devkit-v1
 board_build.partitions = default_8MB.csv
 lib_deps = ${env.lib_deps}
 	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
-	h2zero/NimBLE-Arduino@2.2.3
+	h2zero/NimBLE-Arduino@^2.3.4
 lib_extra_dirs =
 	./lib_extra/NuS-NimBLE-Serial
 build_flags = ${esp32dev_base.build_flags}
@@ -180,7 +189,7 @@ build_flags = ${esp32dev_base.build_flags}
 board = esp32-s3-devkitc-1
 board_build.partitions = default_8MB.csv
 lib_deps = ${env.lib_deps}
-	h2zero/NimBLE-Arduino@2.2.3
+	h2zero/NimBLE-Arduino@^2.3.4
 	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
 lib_extra_dirs =
 	./lib_extra/NuS-NimBLE-Serial
@@ -199,7 +208,7 @@ build_flags = ${esp32s3_base.build_flags}
 board = heltec_wifi_lora_32_V3
 board_build.partitions = default_8MB.csv
 lib_deps = ${env.lib_deps}
-	h2zero/NimBLE-Arduino@2.2.3
+	h2zero/NimBLE-Arduino@^2.3.4
 lib_extra_dirs =
 	./lib_extra/NuS-NimBLE-Serial
 build_flags = ${esp32s3_base.build_flags}
@@ -214,7 +223,7 @@ build_flags = ${esp32s3_base.build_flags}
 board = esp32-s3-devkitc-1
 board_build.partitions = default_8MB.csv
 lib_deps = ${env.lib_deps}
-	h2zero/NimBLE-Arduino@2.2.3
+	h2zero/NimBLE-Arduino@^2.3.4
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
 lib_extra_dirs =
 	./lib_extra/NuS-NimBLE-Serial
@@ -232,7 +241,7 @@ board_build.mcu = esp32s3
 board_build.partitions = default_16MB.csv
 board_build.arduino.memory_type = qio_opi
 lib_deps = ${env.lib_deps}
-	h2zero/NimBLE-Arduino@2.2.3
+	h2zero/NimBLE-Arduino@^2.3.4
 	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
 lib_extra_dirs =
 	./lib_extra/NuS-NimBLE-Serial
@@ -253,7 +262,7 @@ board_build.partitions = default_16MB.csv
 board_build.arduino.memory_type = dio_opi
 lib_deps = ${env.lib_deps}
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.4
-	h2zero/NimBLE-Arduino@2.2.3
+	h2zero/NimBLE-Arduino@^2.3.4
 lib_extra_dirs =
 	./lib_extra/NuS-NimBLE-Serial
 build_flags = ${esp32s3_base.build_flags}
@@ -263,8 +272,8 @@ build_flags = ${esp32s3_base.build_flags}
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-DST7735_160x80
-	-DNV3022B3
-	-DVHF
+	;-DNV3022B3
+	;-DVHF
 	-DBLUETOOTH
 
 [env:BV5DJ-board]
@@ -280,7 +289,7 @@ board_build.mcu = esp32s3
 board_build.partitions = default_16MB.csv
 board_build.arduino.memory_type = qio_opi
 lib_deps = ${env.lib_deps}
-	h2zero/NimBLE-Arduino@2.2.3
+	h2zero/NimBLE-Arduino@^2.3.4
 	knolleary/PubSubClient@^2.8
 lib_extra_dirs =
 	./lib_extra/NuS-NimBLE-Serial
