Add LiLyGo T-Beam BPF

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ht-ct62, esp32c3-mini, esp32-sh1106_8MB, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
+;default_envs = ht-ct62, esp32c3-mini, esp32-sh1106_8MB, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
 ;default_envs = ht-ct62
 ;default_envs = esp32c3-mini
 ;default_envs = esp32-sh1106_8MB
@@ -18,11 +18,14 @@ default_envs = ht-ct62, esp32c3-mini, esp32-sh1106_8MB, ttgo-lora32-v1, ttgo-lor
 ;default_envs = ttgo-lora32-v21
 ;default_envs = ttgo-t-beam-v1_2
 ;default_envs = heltec_htit_tracker
-;default_envs = ttgo_t_beam_S3_SUPREME_V3
+;default_envs = t_beam_s3_supreme
 ;default_envs = heltec_V3_GPS
 ;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
 ;default_envs = esp32_c6_devkit
+;default_envs = lora-tracker
+default_envs = t_beam_s3_bpf
+;default_envs = NAWS4-ESP32S3
 
 [env]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
@@ -54,8 +57,8 @@ build_flags =
 	-L./lib
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
-	;-DCONFIG_I2C_ENABLE_DEBUG_LOG=0
-	;-DCORE_DEBUG_LEVEL=4
+	-DCONFIG_I2C_ENABLE_DEBUG_LOG=0
+	-DCORE_DEBUG_LEVEL=0
 	-DCONFIG_LWIP_PPP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_PAP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_CHAP_SUPPORT=1
@@ -64,6 +67,7 @@ build_flags =
 	-DCONFIG_LWIP_PPPOS_SUPPORT=1
 	-DLWIP_PPP_SUPPORT=1
 	-DLWIP_SUPPORT_CUSTOM_PPP=1
+	-DPPPOS
 
 [esp32dev_base]
 build_flags = 
@@ -87,6 +91,17 @@ build_flags =
 	${env.build_flags}
 	-DARDUINO_USB_MODE=1
 	-DARDUINO_USB_CDC_ON_BOOT=1
+
+[env:lora-tracker]
+platform = ${esp32c3_base.platform}
+board = esp32-c3-devkitm-1
+lib_deps = ${env.lib_deps}
+	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
+build_flags = ${esp32c3_base.build_flags}
+	-DLORA_TRACKER
+	-DOLED
+	-DSH1106
+	-DSTRIP_PIN=1
 
 [env:ht-ct62]
 platform = ${esp32c3_base.platform}
@@ -185,7 +200,7 @@ build_flags = ${esp32dev_base.build_flags}
 	-DSH1106
 	-DBLUETOOTH
 
-[env:ttgo_t_beam_S3_SUPREME_V3]
+[env:t_beam_s3_supreme]
 board = esp32-s3-devkitc-1
 board_build.partitions = default_8MB.csv
 lib_deps = ${env.lib_deps}
@@ -196,7 +211,28 @@ lib_extra_dirs =
 	./lib_extra/XPowersLib
 build_flags = ${esp32s3_base.build_flags}
 	-DLOG_FILE
-	-DTTGO_T_Beam_S3_SUPREME_V3
+	-DT_BEAM_S3_SUPREME
+	-DBOARD_HAS_PSRAM
+	-UARDUINO_USB_CDC_ON_BOOT
+	-mfix-esp32-psram-cache-issue
+	-DOLED
+	-DSH1106
+	-DBLUETOOTH
+
+[env:t_beam_s3_bpf]
+board = esp32s3box
+board_build.mcu = esp32s3
+board_build.partitions = default_16MB.csv
+board_build.arduino.memory_type = qio_opi
+lib_deps = ${env.lib_deps}
+	h2zero/NimBLE-Arduino@^2.3.4
+	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
+lib_extra_dirs =
+	./lib_extra/NuS-NimBLE-Serial
+	./lib_extra/XPowersLib
+build_flags = ${esp32s3_base.build_flags}
+	-DLOG_FILE
+	-DT_BEAM_S3_BPF
 	-DBOARD_HAS_PSRAM
 	-UARDUINO_USB_CDC_ON_BOOT
 	-mfix-esp32-psram-cache-issue
@@ -254,6 +290,7 @@ build_flags = ${esp32s3_base.build_flags}
 	-DOLED
 	-DSH1106
 	-DBLUETOOTH
+	-DSTRIP_PIN=42
 
 [env:aprs-lora-dongle]
 board = esp32s3box
@@ -275,6 +312,7 @@ build_flags = ${esp32s3_base.build_flags}
 	;-DNV3022B3
 	;-DVHF
 	-DBLUETOOTH
+	-DSTRIP_PIN=45
 
 [env:BV5DJ-board]
 board = esp32dev
