--- a/platformio.ini
+++ b/platformio.ini
@@ -18,13 +18,13 @@
 ;default_envs = ttgo-lora32-v21
 ;default_envs = ttgo-t-beam-v1_2
 ;default_envs = heltec_htit_tracker
-;default_envs = t_beam_s3_supreme
+default_envs = t_beam_s3_supreme
 ;default_envs = heltec_V3_GPS
 ;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
 ;default_envs = esp32_c6_devkit
 ;default_envs = lora-tracker
-default_envs = t_beam_s3_bpf
+;default_envs = t_beam_s3_bpf
 ;default_envs = NAWS4-ESP32S3
 
 [env]
@@ -331,6 +331,7 @@ lib_deps = ${env.lib_deps}
 	knolleary/PubSubClient@^2.8
 lib_extra_dirs =
 	./lib_extra/NuS-NimBLE-Serial
+	./lib_extra/XPowersLib
 build_flags = ${esp32s3_base.build_flags}
 	-DLOG_FILE
 	-DNAWS4
