--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;default_envs = ht-ct62, esp32c3-mini, esp32-sh1106_8MB, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, ttgo_t_beam_S3_SUPREME_V3, heltec_V3_GPS, aprs-lora-dongle
+;default_envs = ht-ct62, esp32c3-mini, esp32-sh1106_8MB, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, t_beam_s3_supreme, heltec_V3_GPS, aprs-lora-dongle, t_beam_s3_bpf
 ;default_envs = ht-ct62
 ;default_envs = esp32c3-mini
 ;default_envs = esp32-sh1106_8MB
@@ -18,14 +18,14 @@
 ;default_envs = ttgo-lora32-v21
 ;default_envs = ttgo-t-beam-v1_2
 ;default_envs = heltec_htit_tracker
-default_envs = t_beam_s3_supreme
+;default_envs = t_beam_s3_supreme
 ;default_envs = heltec_V3_GPS
 ;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
 ;default_envs = esp32_c6_devkit
 ;default_envs = lora-tracker
 ;default_envs = t_beam_s3_bpf
-;default_envs = NAWS4-ESP32S3
+default_envs = NAWS4-ESP32S3
 
 [env]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
@@ -58,7 +58,7 @@ build_flags =
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
 	-DCONFIG_I2C_ENABLE_DEBUG_LOG=0
-	-DCORE_DEBUG_LEVEL=0
+	-DCORE_DEBUG_LEVEL=4
 	-DCONFIG_LWIP_PPP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_PAP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_CHAP_SUPPORT=1
@@ -335,8 +335,8 @@ lib_extra_dirs =
 build_flags = ${esp32s3_base.build_flags}
 	-DLOG_FILE
 	-DNAWS4
-	-DBOARD_HAS_PSRAM
-	-mfix-esp32-psram-cache-issue
+	;-DBOARD_HAS_PSRAM
+	;-mfix-esp32-psram-cache-issue
 	;-DOLED
 	;-DSH1106
 	-DBLUETOOTH
