--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 ;default_envs = ht-ct62, esp32c3-mini, esp32-sh1106_8MB, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, t_beam_s3_supreme, heltec_V3_GPS, aprs-lora-dongle, t_beam_s3_bpf
-;default_envs = ht-ct62
+default_envs = ht-ct62
 ;default_envs = esp32c3-mini
 ;default_envs = esp32-sh1106_8MB
 ;default_envs = ttgo-lora32-v1
@@ -25,7 +25,7 @@
 ;default_envs = esp32_c6_devkit
 ;default_envs = lora-tracker
 ;default_envs = t_beam_s3_bpf
-default_envs = NAWS4-ESP32S3
+;default_envs = NAWS4-ESP32S3
 
 [env]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
@@ -58,7 +58,7 @@ build_flags =
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
 	-DCONFIG_I2C_ENABLE_DEBUG_LOG=0
-	-DCORE_DEBUG_LEVEL=4
+	-DCORE_DEBUG_LEVEL=0
 	-DCONFIG_LWIP_PPP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_PAP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_CHAP_SUPPORT=1
@@ -95,12 +95,12 @@ build_flags =
 [env:lora-tracker]
 platform = ${esp32c3_base.platform}
 board = esp32-c3-devkitm-1
-lib_deps = ${env.lib_deps}
-	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
+;lib_deps = ${env.lib_deps}
+;	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
 build_flags = ${esp32c3_base.build_flags}
 	-DLORA_TRACKER
-	-DOLED
-	-DSH1106
+;	-DOLED
+;	-DSH1106
 	-DSTRIP_PIN=1
 
 [env:ht-ct62]
@@ -335,9 +335,10 @@ lib_extra_dirs =
 build_flags = ${esp32s3_base.build_flags}
 	-DLOG_FILE
 	-DNAWS4
+	-DRF2
 	;-DBOARD_HAS_PSRAM
 	;-mfix-esp32-psram-cache-issue
 	;-DOLED
 	;-DSH1106
-	-DBLUETOOTH
+	;-DBLUETOOTH
 	-DMQTT
