--- a/platformio.ini
+++ b/platformio.ini
@@ -23,9 +23,9 @@
 ;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
 ;default_envs = esp32_c6_devkit
-;default_envs = lora-tracker
+default_envs = lora-tracker
 ;default_envs = t_beam_s3_bpf
-default_envs = NAWS4-ESP32S3
+;default_envs = NAWS4-ESP32S3
 
 [env]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
@@ -58,7 +58,7 @@ build_flags =
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
 	-DCONFIG_I2C_ENABLE_DEBUG_LOG=0
-	-DCORE_DEBUG_LEVEL=4
+	-DCORE_DEBUG_LEVEL=0
 	-DCONFIG_LWIP_PPP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_PAP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_CHAP_SUPPORT=1
