Fix Automatic switch WiFi/PPPoE gateway for wireguard and MQTT

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,9 +23,9 @@
 ;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
 ;default_envs = esp32_c6_devkit
-default_envs = lora-tracker
+;default_envs = lora-tracker
 ;default_envs = t_beam_s3_bpf
-;default_envs = NAWS4-ESP32S3
+default_envs = NAWS4-ESP32S3
 
 [env]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
@@ -58,7 +58,7 @@ build_flags =
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
 	-DCONFIG_I2C_ENABLE_DEBUG_LOG=0
-	-DCORE_DEBUG_LEVEL=0
+	-DCORE_DEBUG_LEVEL=4
 	-DCONFIG_LWIP_PPP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_PAP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_CHAP_SUPPORT=1
@@ -110,8 +110,8 @@ lib_deps = ${env.lib_deps}
 	aki237/Adafruit_ESP32_SH1106 @ ^1.0.2
 build_flags = ${esp32c3_base.build_flags}
 	-DHT_CT62
-	-DOLED
-	-DSH1106
+	;-DOLED
+	;-DSH1106
 
 [env:esp32c3-mini]
 platform = ${esp32c3_base.platform}
