Fix wx sample/avg

--- a/platformio.ini
+++ b/platformio.ini
@@ -58,7 +58,7 @@ build_flags =
 	-Wl,-Map,output.map
 	-DWEBSERVER_MAX_POST_ARGS=80
 	-DCONFIG_I2C_ENABLE_DEBUG_LOG=0
-	-DCORE_DEBUG_LEVEL=4
+	-DCORE_DEBUG_LEVEL=0
 	-DCONFIG_LWIP_PPP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_PAP_SUPPORT=1
 	-DCONFIG_LWIP_PPP_CHAP_SUPPORT=1
@@ -305,7 +305,8 @@ lib_extra_dirs =
 build_flags = ${esp32s3_base.build_flags}
 	-DLOG_FILE
 	-DAPRS_LORA_DONGLE
-	-UARDUINO_USB_CDC_ON_BOOT
+	-DARDUINO_USB_MODE=1
+	-DARDUINO_USB_CDC_ON_BOOT=1
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-DST7735_160x80
@@ -342,3 +343,4 @@ build_flags = ${esp32s3_base.build_flags}
 	;-DSH1106
 	;-DBLUETOOTH
 	-DMQTT
+	-DMQTT_MAX_PACKET_SIZE=512
