--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,8 @@
 
 [platformio]
 ;default_envs = ht-ct62, esp32c3-mini, esp32-sh1106_8MB, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, t_beam_s3_supreme, heltec_V3_GPS, aprs-lora-dongle, t_beam_s3_bpf
-default_envs = ht-ct62
+default_envs = aprs-lora-ht, lora-tracker
+;default_envs = ht-ct62
 ;default_envs = esp32c3-mini
 ;default_envs = esp32-sh1106_8MB
 ;default_envs = ttgo-lora32-v1
