Fix PPPOS enable and Reduce RAM

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 ;default_envs = ht-ct62, esp32c3-mini, esp32-sh1106_8MB, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, t_beam_s3_supreme, heltec_V3_GPS, aprs-lora-dongle, t_beam_s3_bpf
-default_envs = aprs-lora-ht, lora-tracker
+;default_envs = aprs-lora-ht, lora-tracker
 ;default_envs = ht-ct62
 ;default_envs = esp32c3-mini
 ;default_envs = esp32-sh1106_8MB
@@ -24,7 +24,7 @@ default_envs = aprs-lora-ht, lora-tracker
 ;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
 ;default_envs = esp32_c6_devkit
-;default_envs = lora-tracker
+default_envs = lora-tracker
 ;default_envs = t_beam_s3_bpf
 ;default_envs = NAWS4-ESP32S3
 
@@ -68,7 +68,7 @@ build_flags =
 	-DCONFIG_LWIP_PPPOS_SUPPORT=1
 	-DLWIP_PPP_SUPPORT=1
 	-DLWIP_SUPPORT_CUSTOM_PPP=1
-	-DPPPOS
+	;-DPPPOS
 
 [esp32dev_base]
 build_flags = 
