Fix  compress position error

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [platformio]
 ;default_envs = ht-ct62, esp32c3-mini, esp32-sh1106_8MB, ttgo-lora32-v1, ttgo-lora32-v1_6, ttgo-t-beam-v1_2, heltec_htit_tracker, t_beam_s3_supreme, heltec_V3_GPS, aprs-lora-dongle, t_beam_s3_bpf
 ;default_envs = aprs-lora-ht, lora-tracker
-;default_envs = ht-ct62
+default_envs = ht-ct62
 ;default_envs = esp32c3-mini
 ;default_envs = esp32-sh1106_8MB
 ;default_envs = ttgo-lora32-v1
@@ -24,7 +24,7 @@
 ;default_envs = aprs-lora-dongle
 ;default_envs = aprs-lora-ht
 ;default_envs = esp32_c6_devkit
-default_envs = lora-tracker
+;default_envs = lora-tracker
 ;default_envs = t_beam_s3_bpf
 ;default_envs = NAWS4-ESP32S3
 
@@ -185,6 +185,7 @@ build_flags = ${esp32dev_base.build_flags}
 	-DTTGO_LORA32_V1
 	-DOLED
 	-DBLUETOOTH
+	-DPPPOS
 
 [env:esp32-sh1106_8MB]
 board = esp32doit-devkit-v1
@@ -200,6 +201,7 @@ build_flags = ${esp32dev_base.build_flags}
 	-DOLED
 	-DSH1106
 	-DBLUETOOTH
+	-DPPPOS
 
 [env:t_beam_s3_supreme]
 board = esp32-s3-devkitc-1
@@ -219,6 +221,7 @@ build_flags = ${esp32s3_base.build_flags}
 	-DOLED
 	-DSH1106
 	-DBLUETOOTH
+	-DPPPOS
 
 [env:t_beam_s3_bpf]
 board = esp32s3box
@@ -240,6 +243,7 @@ build_flags = ${esp32s3_base.build_flags}
 	-DOLED
 	-DSH1106
 	-DBLUETOOTH
+	-DPPPOS
 
 [env:heltec_V3_GPS]
 board = heltec_wifi_lora_32_V3
@@ -255,6 +259,7 @@ build_flags = ${esp32s3_base.build_flags}
 	-DHELTEC_V3_GPS
 	-DOLED
 	-DBLUETOOTH
+	-DPPPOS
 
 [env:heltec_htit_tracker]
 board = esp32-s3-devkitc-1
@@ -271,6 +276,7 @@ build_flags = ${esp32s3_base.build_flags}
 	-DHELTEC_HTIT_TRACKER
 	-DST7735_160x80
 	-DBLUETOOTH
+	-DPPPOS
 
 [env:aprs-lora-ht]
 board = esp32s3box
@@ -292,6 +298,7 @@ build_flags = ${esp32s3_base.build_flags}
 	-DSH1106
 	-DBLUETOOTH
 	-DSTRIP_PIN=42
+	-DPPPOS
 
 [env:aprs-lora-dongle]
 board = esp32s3box
@@ -315,6 +322,7 @@ build_flags = ${esp32s3_base.build_flags}
 	;-DVHF
 	-DBLUETOOTH
 	-DSTRIP_PIN=45
+	-DPPPOS
 
 [env:BV5DJ-board]
 board = esp32dev
@@ -343,5 +351,6 @@ build_flags = ${esp32s3_base.build_flags}
 	;-DOLED
 	;-DSH1106
 	;-DBLUETOOTH
+	-DPPPOS
 	-DMQTT
 	-DMQTT_MAX_PACKET_SIZE=512
